Checher head initiated

--- a/src/stack/Makefile
+++ b/src/stack/Makefile
@@ -6,7 +6,7 @@
 #    By: luicasad <luicasad@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/21 18:16:38 by luicasad          #+#    #+#              #
-#    Updated: 2023/12/26 17:52:15 by luicasad         ###   ########.fr        #
+#    Updated: 2023/12/27 08:46:54 by luicasad         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 MAKEFLAGS += rR
@@ -66,6 +66,7 @@ SRCS	=	nod_init.c \
 		pss_size.c \
 		pss_prin.c \
 		pss_empt.c \
+		pss_isor.c \
 		pss_push.c \
 		pss_pope.c \
 		pss_mami.c \
