--- a/src/libft/Makefile
+++ b/src/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: luicasad <luicasad@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/21 18:16:38 by luicasad          #+#    #+#              #
-#    Updated: 2023/12/31 08:28:49 by luicasad         ###   ########.fr        #
+#    Updated: 2024/01/06 12:27:18 by luicasad         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 MAKEFLAGS += rR
@@ -46,7 +46,7 @@ OBJDIR		=
 #                               COMPILER SETUP                                 #
 # ============================================================================ #
 CC			=	cc
-CFLAGS		=	-Wall -Wextra  -Werror
+CFLAGS		=	-g -Wall -Wextra  -Werror
 HEADS		=	-I$(INCDIR)
 # From 4.4.3 The Function wildcard gnu make manual....
 # Althought wildcard exparnds automaticaly in rules
@@ -75,8 +75,8 @@ SRCS =	ft_isalnum.c \
       	ft_strrchr.c \
       	ft_tolower.c \
       	ft_toupper.c \
-	ft_atoi.c \
-	ft_atol.c \
+		ft_atoi.c \
+		ft_atol.c \
       	ft_strtrim.c \
       	ft_strncmp.c \
       	ft_calloc.c \
@@ -87,20 +87,22 @@ SRCS =	ft_isalnum.c \
       	ft_split.c \
       	ft_itoa.c \
       	ft_putchar_fd.c \
+      	ft_putbits_fd.c \
       	ft_putstr_fd.c \
       	ft_putendl_fd.c \
       	ft_putnbr_fd.c \
       	ft_strmapi.c \
       	ft_striteri.c \
-	ft_lstnew_bonus.c \
-	ft_lstadd_front_bonus.c \
-	ft_lstsize_bonus.c \
-	ft_lstlast_bonus.c \
-	ft_lstmap_bonus.c \
-	ft_lstadd_back_bonus.c \
-	ft_lstdelone_bonus.c \
-	ft_lstclear_bonus.c \
-	ft_lstiter_bonus.c
+		ft_lstnew_bonus.c \
+		ft_lstadd_front_bonus.c \
+		ft_lstsize_bonus.c \
+		ft_lstlast_bonus.c \
+		ft_lstmap_bonus.c \
+		ft_lstadd_back_bonus.c \
+		ft_lstdelone_bonus.c \
+		ft_lstclear_bonus.c \
+		ft_lstiter_bonus.c \
+		ft_msb.c
 
 # Generate a list of object files by replacing .c with .o
 _OBJS = $(SRCS:.c=.o)
