--- a/src/stack/Makefile
+++ b/src/stack/Makefile
@@ -6,7 +6,7 @@
 #    By: luicasad <luicasad@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/21 18:16:38 by luicasad          #+#    #+#              #
-#    Updated: 2024/01/16 10:36:16 by luicasad         ###   ########.fr        #
+#    Updated: 2024/01/16 12:38:53 by luicasad         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 MAKEFLAGS += rR
@@ -111,6 +111,9 @@ all: $(NAME)
 #	$(info objects $(_OBJS))
 #	$(info targets $(OBJS))
 
+#includes all dependencies files.
+#READ GNU make  manual 4.14 Generating Prerequisites Automatically.
+include $(SRCS:.c=.d)
 
 # Vous devez utiliser la commande ar pour créer votre bibliothèque
 # NOTE rcs:
@@ -132,10 +135,20 @@ $(OBJS): $(SRCS) Makefile $(INCDIR)$(HEADER)
 	@echo "$(RED)LIBPSS ========== COMPILING ALL OBJECTS ====================$(DEF_COLOR)"
 	$(CC) $(CFLAGS)  -c $< -o $@ $(HEADS)
 
+#for each c file create its dependency file
+#READ GNU make  manual 4.14 Generating Prerequisites Automatically.
+#READ GNU gcc manuel 3.13 Options controlling the preprocessor.
+%.d: %.c
+	@set -e; rm -f $@; \
+	$(CC) $(HEADS) -MM $< > $@.$$$$ ; \
+	sed 's,\($*\)\.o[ :]*,\1.o $@ : ,g' < $@.$$$$ > $@; \
+	rm -f $@.$$$$
+
 # removes all generated object files
 clean:
 	@echo "$(RED)LIBPSS ========== REMOVING ALL OBJECTS =====================$(DEF_COLOR)"
 	rm -f $(OBJS)
+	rm -f *.d
 
 # removes target file and all generated object files
 fclean: clean
