working on Turkist Algorithm  Stack modification to deal wiht IDX

--- a/src/stack/Makefile
+++ b/src/stack/Makefile
@@ -6,7 +6,7 @@
 #    By: luicasad <luicasad@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/21 18:16:38 by luicasad          #+#    #+#              #
-#    Updated: 2024/01/19 18:39:09 by luicasad         ###   ########.fr        #
+#    Updated: 2024/01/21 12:18:26 by luicasad         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 MAKEFLAGS += rR
@@ -96,7 +96,8 @@ SRCS	=	nod_init.c \
 		pss_mkid.c \
 		pss_pall.c \
 		pss_prad.c \
-		pss_deep.c
+		pss_deep.c \
+		pss_nmtp.c
 
 
 
